Display more info when displaying all cards

--- a/Views/Shared/_CardsPartial.cshtml
+++ b/Views/Shared/_CardsPartial.cshtml
@@ -5,6 +5,10 @@
     <td><a asp-controller="Card" asp-action="SingleCard" asp-route-cardId="@Model.CardId">@Model.Name</a></td>
     <td>@Model.Type</td>
     
+    <td>@Model.Rarity</td>
+    <td>@Model.ManaCost</td>
+    <td>@Model.Power</td>
+    
     <td>@Model.Variations</td>
     
     @{
