--- a/Views/Card/Index.cshtml
+++ b/Views/Card/Index.cshtml
@@ -20,6 +20,9 @@
                 <tr class="text-center">
                     <th>@Model.ColumnCardName</th>
                     <th>@Model.ColumnCardType</th>
+                    <th>@Model.ColumnCardRarity</th>
+                    <th>@Model.ColumnCardManaCost</th>
+                    <th>@Model.ColumnCardPower</th>
                     <th>@Model.ColumnCardVariations</th>
                     <th>@Model.ColumnCardInCollection</th>
                 </tr>
