Added more info to tables & removed variations column

--- a/Views/Shared/_CollectionPartial.cshtml
+++ b/Views/Shared/_CollectionPartial.cshtml
@@ -4,7 +4,11 @@
 <tr class="text-center">
     <td><a asp-controller="Card" asp-action="SingleCard" asp-route-cardId="@Model.CardId">@Model.Name</a></td>
     <td>@Model.Type</td>
-    <td>@Model.Variations</td>
+    
+    <td>@Model.Rarity</td>
+    <td>@Model.ManaCost</td>
+    <td>@Model.Power</td>
+    
     @{
         if (@Model.InCollection)
         {
