--- a/Views/FilterCards/FilterCards.cshtml
+++ b/Views/FilterCards/FilterCards.cshtml
@@ -20,6 +20,11 @@
                 <tr class="text-center">
                     <th>@Model.ColumnCardName</th>
                     <th>@Model.ColumnCardType</th>
+                    
+                    <th>@Model.ColumnCardRarity</th>
+                    <th>@Model.ColumnCardManaCost</th>
+                    <th>@Model.ColumnCardPower</th>
+                    
                     <th>@Model.ColumnCardInCollection</th>
                 </tr>
             </thead>
