--- a/Views/Collection/Packs.cshtml
+++ b/Views/Collection/Packs.cshtml
@@ -3,27 +3,20 @@
 }
 @model mtg_app.Models.Collection.Packs.CollectionPacksViewModel;
 
-<header>
-    <!--autogen header here-->
+<body>
 
     <div class="text-center">
-        <h1 class="display-4">Collection</h1>
-        <p>Here is your Pack collection:</p>
+        <h1 class="display-4">Packs Collection:</h1>
     </div>
     
     <div>
-        <p>Pack Amount: @Model.PackAmounts</p>
+        <p class="fs-5" >Pack Amount: @Model.PackAmounts</p>
         @{
             if (@Model.PackAmounts > 0)
             {
-                <a asp-action="OpenPack" class="btn btn-primary">Open Pack</a>
+                <a asp-action="OpenPack" class="btn btn-dark">Open Pack</a>
             }
         }
     </div>
-    
-</header>
-<body>
-<!--autogen style, move this to css later-->
-
 
 </body>
