--- a/Views/Webshop/Index.cshtml
+++ b/Views/Webshop/Index.cshtml
@@ -2,26 +2,32 @@
 
 @*Header met master view*@
 
-<h1>Webshop</h1>
+<h1 class="fw-bold text-black text-center" >Webshop</h1>
 
 <div>
     <h2>Buy a Booster Pack</h2>
     <b>What is a booster pack?</b><br>
     A booster pack contains 15 cards:<br>
-    - 1x <a asp-controller="Card" asp-action="Index">Rare or Mythic Rare</a> (TODO: filter op Rare en Mythic Rare)<br>
-    - 1x <a asp-controller="Card" asp-action="Index">Basic Land</a> (TODO: filter op land cards)<br>
-    - 3x <a asp-controller="Card" asp-action="Index">Uncommon</a>  (TODO: filter op uncommon)<br>
-    - 10x <a asp-controller="Card" asp-action="Index">Common</a> (TODO: filter op common)<br><br>
-    <a asp-controller="Webshop" asp-action="BuyBoosterPack">BUY BOOSTER PACK</a>
+    <ul>
+        <li>
+            1x <a asp-controller="Card" asp-action="Index">Rare or Mythic Rare</a>
+        </li>
+        <li>
+            1x <a asp-controller="Card" asp-action="Index">Basic Land</a>
+        </li>
+        <li>
+            3x <a asp-controller="Card" asp-action="Index">Uncommon</a>
+        </li>
+        <li>
+            10x <a asp-controller="Card" asp-action="Index">Common</a>
+        </li>
+    </ul>
+    
+    <a asp-controller="Webshop" asp-action="BuyBoosterPack" class="btn btn-primary" >BUY BOOSTER PACK</a>
 </div>
+
+
 <br>
-<div>
-    <h2>Current Listings</h2>
-    @*@foreach (var listing in Model.Listings) {*@
-    <a>USE A PARTIAL HERE "CardListingPartial"?</a>
-    @*<partial name="CardListingPartial" model="Model">*@
-@*}*@
-</div>
 
 
 
