Updated styling of other pases & search & filter sections

--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -22,7 +22,7 @@
             </div>
             
             <div>
-                <a asp-controller="Coin" asp-action="Index"  >Check your coin balance!</a>
+                <a asp-controller="Coin" asp-action="Index" class="btn btn-primary"  >Check your coin balance!</a>
             </div>
 
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
